--- a/result/2022-01-09.md
+++ b/result/2022-01-09.md
@@ -4,19 +4,19 @@
 4. [致广大而尽精微的智慧](https://s.weibo.com//weibo?q=%23%E8%87%B4%E5%B9%BF%E5%A4%A7%E8%80%8C%E5%B0%BD%E7%B2%BE%E5%BE%AE%E7%9A%84%E6%99%BA%E6%85%A7%23&Refer=top) 1573353
 5. [天津2例确诊没有津外旅居史](https://s.weibo.com//weibo?q=%23%E5%A4%A9%E6%B4%A52%E4%BE%8B%E7%A1%AE%E8%AF%8A%E6%B2%A1%E6%9C%89%E6%B4%A5%E5%A4%96%E6%97%85%E5%B1%85%E5%8F%B2%23&Refer=top) 1323552
 6. [刚领完结婚证男子把妻子落在地铁站台](https://s.weibo.com//weibo?q=%23%E5%88%9A%E9%A2%86%E5%AE%8C%E7%BB%93%E5%A9%9A%E8%AF%81%E7%94%B7%E5%AD%90%E6%8A%8A%E5%A6%BB%E5%AD%90%E8%90%BD%E5%9C%A8%E5%9C%B0%E9%93%81%E7%AB%99%E5%8F%B0%23&Refer=top) 1143899
-7. [天津疫情](https://s.weibo.com//weibo?q=%E5%A4%A9%E6%B4%A5%E7%96%AB%E6%83%85&Refer=top) 1057717
-8. [天津要求非必要不离津](https://s.weibo.com//weibo?q=%23%E5%A4%A9%E6%B4%A5%E8%A6%81%E6%B1%82%E9%9D%9E%E5%BF%85%E8%A6%81%E4%B8%8D%E7%A6%BB%E6%B4%A5%23&Refer=top) 916538
-9. [天津新增病例涉及托管机构和学校](https://s.weibo.com//weibo?q=%23%E5%A4%A9%E6%B4%A5%E6%96%B0%E5%A2%9E%E7%97%85%E4%BE%8B%E6%B6%89%E5%8F%8A%E6%89%98%E7%AE%A1%E6%9C%BA%E6%9E%84%E5%92%8C%E5%AD%A6%E6%A0%A1%23&Refer=top) 887489
-10. [深圳疫情](https://s.weibo.com//weibo?q=%23%E6%B7%B1%E5%9C%B3%E7%96%AB%E6%83%85%23&Refer=top) 854981
-11. [当中年人买了AirPods](https://s.weibo.com//weibo?q=%23%E5%BD%93%E4%B8%AD%E5%B9%B4%E4%BA%BA%E4%B9%B0%E4%BA%86AirPods%23&Refer=top) 727730
+7. [当中年人买了AirPods](https://s.weibo.com//weibo?q=%23%E5%BD%93%E4%B8%AD%E5%B9%B4%E4%BA%BA%E4%B9%B0%E4%BA%86AirPods%23&Refer=top) 1089437
+8. [天津疫情](https://s.weibo.com//weibo?q=%E5%A4%A9%E6%B4%A5%E7%96%AB%E6%83%85&Refer=top) 1057717
+9. [天津要求非必要不离津](https://s.weibo.com//weibo?q=%23%E5%A4%A9%E6%B4%A5%E8%A6%81%E6%B1%82%E9%9D%9E%E5%BF%85%E8%A6%81%E4%B8%8D%E7%A6%BB%E6%B4%A5%23&Refer=top) 916538
+10. [天津新增病例涉及托管机构和学校](https://s.weibo.com//weibo?q=%23%E5%A4%A9%E6%B4%A5%E6%96%B0%E5%A2%9E%E7%97%85%E4%BE%8B%E6%B6%89%E5%8F%8A%E6%89%98%E7%AE%A1%E6%9C%BA%E6%9E%84%E5%92%8C%E5%AD%A6%E6%A0%A1%23&Refer=top) 887489
+11. [深圳疫情](https://s.weibo.com//weibo?q=%23%E6%B7%B1%E5%9C%B3%E7%96%AB%E6%83%85%23&Refer=top) 854981
 12. [国外模特都用的瘦小腿训练](https://s.weibo.com//weibo?q=%E5%9B%BD%E5%A4%96%E6%A8%A1%E7%89%B9%E9%83%BD%E7%94%A8%E7%9A%84%E7%98%A6%E5%B0%8F%E8%85%BF%E8%AE%AD%E7%BB%83&Refer=top) 603695
 13. [当代年轻人的屏保有多万能](https://s.weibo.com//weibo?q=%23%E5%BD%93%E4%BB%A3%E5%B9%B4%E8%BD%BB%E4%BA%BA%E7%9A%84%E5%B1%8F%E4%BF%9D%E6%9C%89%E5%A4%9A%E4%B8%87%E8%83%BD%23&Refer=top) 533729
-14. [郑州人的心疼是相互的](https://s.weibo.com//weibo?q=%23%E9%83%91%E5%B7%9E%E4%BA%BA%E7%9A%84%E5%BF%83%E7%96%BC%E6%98%AF%E7%9B%B8%E4%BA%92%E7%9A%84%23&Refer=top) 405786
-15. [400多个车位同属一个业主](https://s.weibo.com//weibo?q=%23400%E5%A4%9A%E4%B8%AA%E8%BD%A6%E4%BD%8D%E5%90%8C%E5%B1%9E%E4%B8%80%E4%B8%AA%E4%B8%9A%E4%B8%BB%23&Refer=top) 393079
-16. [水果裹了巧克力脆皮后](https://s.weibo.com//weibo?q=%23%E6%B0%B4%E6%9E%9C%E8%A3%B9%E4%BA%86%E5%B7%A7%E5%85%8B%E5%8A%9B%E8%84%86%E7%9A%AE%E5%90%8E%23&Refer=top) 375219
-17. [深圳2区域调整为中风险区域](https://s.weibo.com//weibo?q=%23%E6%B7%B1%E5%9C%B32%E5%8C%BA%E5%9F%9F%E8%B0%83%E6%95%B4%E4%B8%BA%E4%B8%AD%E9%A3%8E%E9%99%A9%E5%8C%BA%E5%9F%9F%23&Refer=top) 349615
-18. [任嘉伦李佳琦直播](https://s.weibo.com//weibo?q=%23%E4%BB%BB%E5%98%89%E4%BC%A6%E6%9D%8E%E4%BD%B3%E7%90%A6%E7%9B%B4%E6%92%AD%23&Refer=top) 347212
-19. [哈萨克斯坦总统命令部队无预警杀人](https://s.weibo.com//weibo?q=%23%E5%93%88%E8%90%A8%E5%85%8B%E6%96%AF%E5%9D%A6%E6%80%BB%E7%BB%9F%E5%91%BD%E4%BB%A4%E9%83%A8%E9%98%9F%E6%97%A0%E9%A2%84%E8%AD%A6%E6%9D%80%E4%BA%BA%23&Refer=top) 321461
+14. [郑州人的心疼是相互的](https://s.weibo.com//weibo?q=%23%E9%83%91%E5%B7%9E%E4%BA%BA%E7%9A%84%E5%BF%83%E7%96%BC%E6%98%AF%E7%9B%B8%E4%BA%92%E7%9A%84%23&Refer=top) 412641
+15. [哈萨克斯坦总统命令部队无预警杀人](https://s.weibo.com//weibo?q=%23%E5%93%88%E8%90%A8%E5%85%8B%E6%96%AF%E5%9D%A6%E6%80%BB%E7%BB%9F%E5%91%BD%E4%BB%A4%E9%83%A8%E9%98%9F%E6%97%A0%E9%A2%84%E8%AD%A6%E6%9D%80%E4%BA%BA%23&Refer=top) 405485
+16. [400多个车位同属一个业主](https://s.weibo.com//weibo?q=%23400%E5%A4%9A%E4%B8%AA%E8%BD%A6%E4%BD%8D%E5%90%8C%E5%B1%9E%E4%B8%80%E4%B8%AA%E4%B8%9A%E4%B8%BB%23&Refer=top) 393079
+17. [水果裹了巧克力脆皮后](https://s.weibo.com//weibo?q=%23%E6%B0%B4%E6%9E%9C%E8%A3%B9%E4%BA%86%E5%B7%A7%E5%85%8B%E5%8A%9B%E8%84%86%E7%9A%AE%E5%90%8E%23&Refer=top) 375219
+18. [深圳2区域调整为中风险区域](https://s.weibo.com//weibo?q=%23%E6%B7%B1%E5%9C%B32%E5%8C%BA%E5%9F%9F%E8%B0%83%E6%95%B4%E4%B8%BA%E4%B8%AD%E9%A3%8E%E9%99%A9%E5%8C%BA%E5%9F%9F%23&Refer=top) 349615
+19. [任嘉伦李佳琦直播](https://s.weibo.com//weibo?q=%23%E4%BB%BB%E5%98%89%E4%BC%A6%E6%9D%8E%E4%BD%B3%E7%90%A6%E7%9B%B4%E6%92%AD%23&Refer=top) 347212
 20. [货车迎头遇婚车主动后退200米](https://s.weibo.com//weibo?q=%23%E8%B4%A7%E8%BD%A6%E8%BF%8E%E5%A4%B4%E9%81%87%E5%A9%9A%E8%BD%A6%E4%B8%BB%E5%8A%A8%E5%90%8E%E9%80%80200%E7%B1%B3%23&Refer=top) 317180
 21. [禹州发生聚集性疫情](https://s.weibo.com//weibo?q=%23%E7%A6%B9%E5%B7%9E%E5%8F%91%E7%94%9F%E8%81%9A%E9%9B%86%E6%80%A7%E7%96%AB%E6%83%85%23&Refer=top) 306101
 22. [男生能有多爱惜自己的车](https://s.weibo.com//weibo?q=%23%E7%94%B7%E7%94%9F%E8%83%BD%E6%9C%89%E5%A4%9A%E7%88%B1%E6%83%9C%E8%87%AA%E5%B7%B1%E7%9A%84%E8%BD%A6%23&Refer=top) 284754
@@ -41,3 +41,4 @@
 41. [哈萨克斯坦不明车辆向人群发放武器](https://s.weibo.com//weibo?q=%23%E5%93%88%E8%90%A8%E5%85%8B%E6%96%AF%E5%9D%A6%E4%B8%8D%E6%98%8E%E8%BD%A6%E8%BE%86%E5%90%91%E4%BA%BA%E7%BE%A4%E5%8F%91%E6%94%BE%E6%AD%A6%E5%99%A8%23&Refer=top) 169928
 42. [长延堡街道](https://s.weibo.com//weibo?q=%E9%95%BF%E5%BB%B6%E5%A0%A1%E8%A1%97%E9%81%93&Refer=top) 166690
 43. [深圳封控区一日三餐免费提供](https://s.weibo.com//weibo?q=%23%E6%B7%B1%E5%9C%B3%E5%B0%81%E6%8E%A7%E5%8C%BA%E4%B8%80%E6%97%A5%E4%B8%89%E9%A4%90%E5%85%8D%E8%B4%B9%E6%8F%90%E4%BE%9B%23&Refer=top) 165495
+44. [狗子叼手电走夜路接女主人回家](https://s.weibo.com//weibo?q=%23%E7%8B%97%E5%AD%90%E5%8F%BC%E6%89%8B%E7%94%B5%E8%B5%B0%E5%A4%9C%E8%B7%AF%E6%8E%A5%E5%A5%B3%E4%B8%BB%E4%BA%BA%E5%9B%9E%E5%AE%B6%23&Refer=top) 90516
